# kibitz

./: CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
src/: app.rs  config.rs  main.rs
src/event/: handler.rs  keybindings.rs  mod.rs  watcher.rs
src/git/: diff.rs  history.rs  mod.rs  status.rs
src/model/: commit.rs  diff_state.rs  mod.rs  tree.rs
src/ui/: diff_view.rs  file_tree.rs  help.rs  layout.rs  mod.rs
