[package]
name = "kibitz"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.100"
crossterm = "0.29.0"
dirs = "6.0.0"
git2 = "0.20.3"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
